kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: gateway
    spec:
      containers:
      - name: gateway
        image: salaboy/gateway
        ports:
        - containerPort: 8080
      serviceAccountName: gateway
