kubernetes/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gateway
spec:
  selector:
    app: gateway
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
